--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,7 +1,11 @@
 T: ToDo		Q:Question	E:Extra
 --------------------------------------------------------------------------------------
 T- Use SweetAlert to show information in active user View
+T- insert in UserDetail table when created account
+T- Assign User Role when created account 
+T- Diplay Name for columns of tables
 Q- What is TempData[] (focus on its LifeTime)
+Q- Async Await
 T- Use fonts
 T- Send Email
 
