start send mail class developing

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -22,6 +22,8 @@ Q- What is TempData[] (focus on its LifeTime)
 Q- Async Await
 
 
+Links 
+http://www.binaryintellect.net/articles/e30d07c6-6f57-43e7-a2ce-6d2d67ebf403.aspx
 
 
 
